[tool.poetry]
name = "oqs-jupyterbook"
version = "0.1.0"
description = ""
authors = ["Matteo Rossi <teo.red90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.10.2"
qiskit = "^0.25.4"
bokeh = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
